# 2021-01-27-olga-remove-protein

./: Cargo.toml  README.md  shell.nix
.github/workflows/: test.yml
data/: bat2-LU__AAACCTGAGCCACGCT-s100.sig  bat2-LU__AAACCTGAGCCACGCT.sig
nix/: rust.nix  sources.json
src/: main.rs
tests/: subtract_cmd.rs
