[package]
name = "subtract"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
env_logger = "0.8.2"
log = "0.4.14"
predicates = "1.0.6"
rayon = "1.5.0"
serde_json = "1.0.61"
sourmash = "0.10.0"
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "1.0.2"
tempfile = "3.2.0"
